# nixcalcpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  readme.txt
include/calc/: calculator.h
lib/calc/: CMakeLists.txt  calculator.cpp  online_debug.cpp
